Created ORM model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url = jdbc:postgresql://localhost:5555/MorseTranslator
+spring.datasource.username = postgres
+spring.datasource.password = ctq,jh123
 
+spring.jpa.properties.hiberanate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
