--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,12 @@ spring.datasource.username = postgres
 spring.datasource.password = ctq,jh123
 
 spring.jpa.properties.hiberanate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 
+server.address=localhost
 server.port=${port:12351}
+
+# TODO: Delete on production
+spring.devtools.add-properties=true
+logging.level.web=DEBUG
