The addition of bilateral relations in the model data tables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password = ctq,jh123
 spring.jpa.properties.hiberanate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
+spring.data.rest.base-path=/main
 
 server.address=localhost
 server.port=${port:12351}
