Fix database services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,19 @@
+# Database properties
 spring.datasource.url = jdbc:postgresql://localhost:5555/MorseTranslator
 spring.datasource.username = postgres
 spring.datasource.password = ctq,jh123
-
 spring.jpa.properties.hiberanate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.data.rest.base-path=/main
 
+# Server properties
+spring.jpa.properties.connection.characterEncoding=utf-8
+spring.jpa.properties.connection.CharSet=utf-8
+spring.jpa.properties.connection.useUnicode=true
+server.compression.enabled=true
 server.address=localhost
-server.port=${port:12351}
-
-# TODO: Delete on production
+server.port=22222
+# TODO: Delete next properties on production
 spring.devtools.add-properties=true
 logging.level.web=DEBUG
