--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url = jdbc:postgresql://localhost:5555/MorseTranslator
 spring.datasource.username = postgres
 spring.datasource.password = ctq,jh123
-spring.jpa.properties.hiberanate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.data.rest.base-path=/main
