Optimization of controllers. Also cleanup the code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,8 @@ spring.datasource.url = jdbc:postgresql://localhost:5555/MorseTranslator
 spring.datasource.username = postgres
 spring.datasource.password = ctq,jh123
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL10Dialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
-spring.data.rest.base-path=/main
 
 # Server properties
 spring.jpa.properties.connection.characterEncoding=utf-8
