Amended Application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,4 @@ spring.jpa.properties.connection.useUnicode=true
 server.compression.enabled=true
 server.address=localhost
 server.port=22222
-# TODO: Delete next properties on production
-spring.devtools.add-properties=true
-logging.level.web=DEBUG
+spring.devtools.add-properties=false
